packages/nci-engine/tests/snapshots/snapshot_tests__rust_namespace-export-method-overloads.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "namespace-export-method-overloads",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "namespace-export-method-overloads@1.0.0::Ns",
      "name": "Ns",
      "kind": 279,
      "kindName": "ExportDeclaration",
      "package": "namespace-export-method-overloads",
      "filePath": "index.d.ts",
      "signature": "export * as Ns from './api.js'",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "namespace-export-method-overloads@1.0.0::Ns.Service",
      "name": "Ns.Service",
      "parentSymbolId": "namespace-export-method-overloads@1.0.0::Ns",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "namespace-export-method-overloads",
      "filePath": "api.d.ts",
      "signature": "export interface Service {\n  use(value: string): void;\n  use(value: number): void;\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "reExportedFrom": "index.d.ts",
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "namespace-export-method-overloads@1.0.0::Ns.Service.use",
      "name": "Ns.Service.use",
      "parentSymbolId": "namespace-export-method-overloads@1.0.0::Ns.Service",
      "kind": 174,
      "kindName": "MethodSignature",
      "package": "namespace-export-method-overloads",
      "filePath": "api.d.ts",
      "signature": "use(value: string): void;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "reExportedFrom": "index.d.ts",
      "isInternal": false
    },
    {
      "id": "namespace-export-method-overloads@1.0.0::Ns.Service.use#2",
      "name": "Ns.Service.use",
      "parentSymbolId": "namespace-export-method-overloads@1.0.0::Ns.Service",
      "kind": 174,
      "kindName": "MethodSignature",
      "package": "namespace-export-method-overloads",
      "filePath": "api.d.ts",
      "signature": "use(value: number): void;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "reExportedFrom": "index.d.ts",
      "isInternal": false
    },
    {
      "id": "namespace-export-method-overloads@1.0.0::api.d.ts::Service",
      "name": "Service",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "namespace-export-method-overloads",
      "filePath": "api.d.ts",
      "signature": "export interface Service {\n  use(value: string): void;\n  use(value: number): void;\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "namespace-export-method-overloads@1.0.0::api.d.ts::Service.use",
      "name": "Service.use",
      "parentSymbolId": "namespace-export-method-overloads@1.0.0::api.d.ts::Service",
      "kind": 174,
      "kindName": "MethodSignature",
      "package": "namespace-export-method-overloads",
      "filePath": "api.d.ts",
      "signature": "use(value: string): void;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "namespace-export-method-overloads@1.0.0::api.d.ts::Service.use#2",
      "name": "Service.use",
      "parentSymbolId": "namespace-export-method-overloads@1.0.0::api.d.ts::Service",
      "kind": 174,
      "kindName": "MethodSignature",
      "package": "namespace-export-method-overloads",
      "filePath": "api.d.ts",
      "signature": "use(value: number): void;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true
    }
  ],
  "totalSymbols": 7,
  "totalFiles": 2,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
