packages/nci-engine/tests/snapshots/snapshot_tests__rust_namespace-interface-same-name.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "namespace-interface-same-name",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "namespace-interface-same-name@1.0.0::Scope",
      "name": "Scope",
      "kind": 268,
      "kindName": "ModuleDeclaration",
      "package": "namespace-interface-same-name",
      "filePath": "index.d.ts",
      "sourcePackageName": "namespace-interface-same-name",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "export namespace Scope {\n  export interface Scope {\n    block: unknown;\n    type: string;\n  }\n}",
      "jsDoc": "Mirrors eslint `namespace Scope { interface Scope { ... } }` merge naming:\ninterface members must be qualified as `Outer.Outer.member`, not `Outer.member`.",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "namespace-interface-same-name@1.0.0::Scope.Scope",
      "name": "Scope.Scope",
      "parentSymbolId": "namespace-interface-same-name@1.0.0::Scope",
      "enclosingModuleDeclarationId": "namespace-interface-same-name@1.0.0::Scope",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "namespace-interface-same-name",
      "filePath": "index.d.ts",
      "sourcePackageName": "namespace-interface-same-name",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "export interface Scope {\n    block: unknown;\n    type: string;\n  }",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "namespace-interface-same-name@1.0.0::Scope.Scope.block",
      "name": "Scope.Scope.block",
      "parentSymbolId": "namespace-interface-same-name@1.0.0::Scope.Scope",
      "enclosingModuleDeclarationId": "namespace-interface-same-name@1.0.0::Scope",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "namespace-interface-same-name",
      "filePath": "index.d.ts",
      "sourcePackageName": "namespace-interface-same-name",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "block: unknown;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "namespace-interface-same-name@1.0.0::Scope.Scope.type",
      "name": "Scope.Scope.type",
      "parentSymbolId": "namespace-interface-same-name@1.0.0::Scope.Scope",
      "enclosingModuleDeclarationId": "namespace-interface-same-name@1.0.0::Scope",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "namespace-interface-same-name",
      "filePath": "index.d.ts",
      "sourcePackageName": "namespace-interface-same-name",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "type: string;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    }
  ],
  "totalSymbols": 4,
  "totalFiles": 1,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
