packages/nci-engine/tests/snapshots/snapshot_tests__rust_namespace-qualified-return-type.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "namespace-qualified-return-type",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "namespace-qualified-return-type@1.0.0::RouterOptions",
      "name": "RouterOptions",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "namespace-qualified-return-type",
      "filePath": "index.d.ts",
      "sourcePackageName": "namespace-qualified-return-type",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "export interface RouterOptions {\n  strict: boolean;\n}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "namespace-qualified-return-type@1.0.0::RouterOptions.strict",
      "name": "RouterOptions.strict",
      "parentSymbolId": "namespace-qualified-return-type@1.0.0::RouterOptions",
      "kind": 172,
      "kindName": "PropertySignature",
      "package": "namespace-qualified-return-type",
      "filePath": "index.d.ts",
      "sourcePackageName": "namespace-qualified-return-type",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "strict: boolean;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "namespace-qualified-return-type@1.0.0::core.d.ts::core",
      "name": "core",
      "kind": 268,
      "kindName": "ModuleDeclaration",
      "package": "namespace-qualified-return-type",
      "filePath": "core.d.ts",
      "sourcePackageName": "namespace-qualified-return-type",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "core.d.ts",
      "signature": "declare namespace core {\n  interface Router {\n    handle(path: string): void;\n  }\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true,
      "modifiers": [
        "declare"
      ]
    },
    {
      "id": "namespace-qualified-return-type@1.0.0::core.d.ts::core#2",
      "name": "core",
      "kind": 278,
      "kindName": "ExportAssignment",
      "package": "namespace-qualified-return-type",
      "filePath": "core.d.ts",
      "sourcePackageName": "namespace-qualified-return-type",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "core.d.ts",
      "signature": "export = core;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "namespace-qualified-return-type@1.0.0::core.d.ts::core.Router",
      "name": "core.Router",
      "parentSymbolId": "namespace-qualified-return-type@1.0.0::core.d.ts::core",
      "enclosingModuleDeclarationId": "namespace-qualified-return-type@1.0.0::core.d.ts::core",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "namespace-qualified-return-type",
      "filePath": "core.d.ts",
      "sourcePackageName": "namespace-qualified-return-type",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "core.d.ts",
      "signature": "interface Router {\n    handle(path: string): void;\n  }",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "namespace-qualified-return-type@1.0.0::core.d.ts::core.Router.handle",
      "name": "core.Router.handle",
      "parentSymbolId": "namespace-qualified-return-type@1.0.0::core.d.ts::core.Router",
      "enclosingModuleDeclarationId": "namespace-qualified-return-type@1.0.0::core.d.ts::core",
      "kind": 174,
      "kindName": "MethodSignature",
      "package": "namespace-qualified-return-type",
      "filePath": "core.d.ts",
      "sourcePackageName": "namespace-qualified-return-type",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "core.d.ts",
      "signature": "handle(path: string): void;",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "namespace-qualified-return-type@1.0.0::createRouter",
      "name": "createRouter",
      "kind": 263,
      "kindName": "FunctionDeclaration",
      "package": "namespace-qualified-return-type",
      "filePath": "index.d.ts",
      "sourcePackageName": "namespace-qualified-return-type",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "export declare function createRouter(options?: RouterOptions): core.Router;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [
        "namespace-qualified-return-type@1.0.0::RouterOptions",
        "namespace-qualified-return-type@1.0.0::core.d.ts::core.Router"
      ],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    }
  ],
  "totalSymbols": 7,
  "totalFiles": 2,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
