packages/nci-engine/tests/snapshots/snapshot_tests__rust_namespace-reexport.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "namespace-reexport",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "namespace-reexport@1.0.0::CORE_VERSION",
      "name": "CORE_VERSION",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "namespace-reexport",
      "filePath": "index.d.ts",
      "signature": "declare const CORE_VERSION: \"1.0.0\"",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "namespace-reexport@1.0.0::Lib",
      "name": "Lib",
      "kind": 279,
      "kindName": "ExportDeclaration",
      "package": "namespace-reexport",
      "filePath": "index.d.ts",
      "signature": "export * as Lib from './lib.js'",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "namespace-reexport@1.0.0::Lib.VERSION",
      "name": "Lib.VERSION",
      "parentSymbolId": "namespace-reexport@1.0.0::Lib",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "namespace-reexport",
      "filePath": "lib.d.ts",
      "signature": "declare const VERSION: \"1.0.0\"",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "reExportedFrom": "index.d.ts",
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "namespace-reexport@1.0.0::Lib.internal",
      "name": "Lib.internal",
      "parentSymbolId": "namespace-reexport@1.0.0::Lib",
      "kind": 263,
      "kindName": "FunctionDeclaration",
      "package": "namespace-reexport",
      "filePath": "lib.d.ts",
      "signature": "export function internal(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "reExportedFrom": "index.d.ts",
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "namespace-reexport@1.0.0::lib.d.ts::VERSION",
      "name": "VERSION",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "namespace-reexport",
      "filePath": "lib.d.ts",
      "signature": "declare const VERSION: \"1.0.0\"",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "namespace-reexport@1.0.0::lib.d.ts::internal",
      "name": "internal",
      "kind": 263,
      "kindName": "FunctionDeclaration",
      "package": "namespace-reexport",
      "filePath": "lib.d.ts",
      "signature": "export function internal(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true,
      "modifiers": [
        "export"
      ]
    }
  ],
  "totalSymbols": 6,
  "totalFiles": 2,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
