packages/nci-engine/tests/snapshots/snapshot_tests__rust_parenthesized-intersection-expansion.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "parenthesized-intersection-expansion",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "parenthesized-intersection-expansion@1.0.0::index.d.ts::InnerParen",
      "name": "InnerParen",
      "kind": 264,
      "kindName": "ClassDeclaration",
      "package": "parenthesized-intersection-expansion",
      "filePath": "index.d.ts",
      "sourcePackageName": "parenthesized-intersection-expansion",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "declare class InnerParen {\n  fromClass(): void;\n}",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true,
      "modifiers": [
        "declare"
      ]
    },
    {
      "id": "parenthesized-intersection-expansion@1.0.0::index.d.ts::InnerParen.prototype.fromClass",
      "name": "InnerParen.prototype.fromClass",
      "parentSymbolId": "parenthesized-intersection-expansion@1.0.0::index.d.ts::InnerParen",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "parenthesized-intersection-expansion",
      "filePath": "index.d.ts",
      "sourcePackageName": "parenthesized-intersection-expansion",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "fromClass(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": true
    },
    {
      "id": "parenthesized-intersection-expansion@1.0.0::ParenBox",
      "name": "ParenBox",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "parenthesized-intersection-expansion",
      "filePath": "index.d.ts",
      "sourcePackageName": "parenthesized-intersection-expansion",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "declare const ParenBox: (typeof InnerParen) & { merged(): void }",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [
        "parenthesized-intersection-expansion@1.0.0::index.d.ts::InnerParen"
      ],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    },
    {
      "id": "parenthesized-intersection-expansion@1.0.0::ParenBox.fromClass",
      "name": "ParenBox.fromClass",
      "parentSymbolId": "parenthesized-intersection-expansion@1.0.0::ParenBox",
      "kind": 175,
      "kindName": "MethodDeclaration",
      "package": "parenthesized-intersection-expansion",
      "filePath": "index.d.ts",
      "sourcePackageName": "parenthesized-intersection-expansion",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "fromClass(): void;",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false
    },
    {
      "id": "parenthesized-intersection-expansion@1.0.0::ParenBox.merged",
      "name": "ParenBox.merged",
      "parentSymbolId": "parenthesized-intersection-expansion@1.0.0::ParenBox",
      "kind": 174,
      "kindName": "MethodSignature",
      "package": "parenthesized-intersection-expansion",
      "filePath": "index.d.ts",
      "sourcePackageName": "parenthesized-intersection-expansion",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "merged(): void",
      "isTypeOnly": false,
      "symbolSpace": "type",
      "dependencies": [],
      "isInternal": false
    }
  ],
  "totalSymbols": 5,
  "totalFiles": 1,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
